# SmartContract

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/api/: register_endpoints.py
app/api/healthcheck/: healthcheck.py
app/api/tokens/: route.py  schemas.py  utils.py
app/database/: models.py  utils.py
app/settings/: config.py
app/web3/: base.py
app/web3/contract/: ethereum_goerli.py
