[tool.poetry]
name = "smartcontract"
version = "0.1.0"
description = ""
authors = ["Andrew <vesell4123@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"
environs = "^9.5.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
web3 = "^5.31.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
